新增泛型解析